--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div>
             <img id="main" src="./heart-gif-3.gif" />
-        <h1>Will you be my special someone1 <img class="hidden" id='data' src="./untitled.gif"/>?</h1>
+        <h1>Will you be my special someone <img class="hidden" id='data' src="./untitled.gif"/>?</h1>
         </div>
         
         <div class="buttons">
